@@ -284,3 +284,4 @@
   6-Jan-2021  V1.651 Enumeration updates for selected polymer types.
   8-Jan-2021  V1.652 Add mongodb distinct() method.
   8-Jan-2021  V1.653 Enumeration updates for selected polymer types.
+ 12-Jan-2021  V1.654 Add primary citation author ORCIDs
